--- a/style.css
+++ b/style.css
@@ -7,14 +7,15 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 2rem;
+  margin-bottom: 30px;
   margin-top: 20px;
 }
 nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 760px;
 }
+
 section {
   display: flex;
   justify-content: space-between;
@@ -26,4 +27,23 @@ article {
   justify-content: space-between;
   max-height: 440px;
   margin-left: 2rem;
+}
+article p {
+  overflow-y: scroll;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+button {
+  padding: 1rem 3rem;
+  width: 60%;
+  border-radius: 10px;
+  transition-duration: 350ms;
+}
+button:hover {
+  background-color: salmon;
+}
+footer {
+  background-color: #aaaaaa;
+  min-height: 200px;
+  margin-top: 30px;
 }
